templates/ex-007_template.yaml
---
Parameters:
  KeyPairName:
    Type: String
    Default: acpkey1
    Description: Name of existing KeyPair

Mappings: 
  RegionMap: 
    us-east-1: 
      "64": "ami-a4dc46db"
    us-east-2: 
      "64": "ami-6a003c0f"
    us-west-1:
      "64": "ami-8d948ced"
    us-west-2:
      "64": "ami-db710fa3"
    ca-central-1:
      "64": "ami-7e21a11a"
    eu-west-1:
      "64": "ami-58d7e821"
    eu-west-2:
      "64": "ami-5daa463a"
    eu-west-3:
      "64": "ami-1960d164"
    eu-central-1:
      "64": "ami-c7e0c82c"
    ap-northeast-1:
      "64": "ami-48a45937"
    ap-northeast-2:
      "64": "ami-f030989e"
    ap-southeast-1:
      "64": "ami-81cefcfd"
    ap-southeast-2:
      "64": "ami-963cecf4"
    ap-south-1:
      "64": "ami-41e9c52e"
    sa-east-1:
      "64": "ami-67fca30b"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: vpc_ex006

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
        - Key: Name
          Value: ig_ex006

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: subnet_ex007
      VpcId: !Ref VPC

  RouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: rtb_public_ex007

  DefaultRoutePublic:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTablePublic
    DependsOn: AttachInternetGateway

  AssociateSubnetRouteTablePublic:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref Subnet

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: sg_ex007
      GroupDescription: "Security Group for Instances in ex-007"
      SecurityGroupIngress:
        - 
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
      VpcId: !Ref VPC

  Instance1:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", 64]
      InstanceType: t2.micro
      KeyName:  !Ref KeyPairName
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref Subnet
          GroupSet:
            - !Ref SecurityGroup
      Tags: 
        - Key: Name
          Value: i_01_ex007
      UserData: !Base64
        "Fn::Join":
          - "\n"
          -
            - "#!/bin/bash"
            - "sudo apt-get update"
            - "sudo apt-get dist-upgrade -y"
            - "sudo apt-get install python3-pip -y"
            - "pip3 install awscli"
    DependsOn: DefaultRoutePublic
  
  Instance2:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", 64]
      InstanceType: t2.micro
      KeyName:  !Ref KeyPairName
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId: !Ref Subnet
          GroupSet:
            - !Ref SecurityGroup
      Tags: 
        - Key: Name
          Value: i_02_ex007
      UserData: !Base64
        "Fn::Join":
          - "\n"
          -
            - "#!/bin/bash"
            - "sudo apt-get update"
            - "sudo apt-get dist-upgrade -y"
            - "sudo apt-get install python3-pip -y"
            - "pip3 install awscli"
    DependsOn: DefaultRoutePublic
...
